Fix transactions heading whitespace

--- a/styles/style.css
+++ b/styles/style.css
@@ -344,6 +344,8 @@ input[type=number] {
 .transactions-heading {
 	text-align: center;
 	padding-top: 18px;
+	padding-bottom: 0;
+	margin-bottom: 0;
 }
 .transactions-heading-fixed {
 	position: fixed;
